--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-spring/web": "^9.7.4",
     "@vercel/analytics": "^1.3.1",
+    "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
