--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
