--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.16.1",
+    "drizzle-orm-pg": "^0.16.3",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
